--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.0.0",
     "@capacitor/core": "7.4.4",
     "@ionic/angular": "^8.0.0",
+    "chart.js": "^4.5.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
